--- a/Diagnosis.App/Windows/HelpWindow.xaml
+++ b/Diagnosis.App/Windows/HelpWindow.xaml
@@ -1,9 +1,11 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.HelpWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Помощь"
-        Width="500"
-        Height="500">
+        Title="{Binding Title}"
+        Height="{Binding Path=Default.HelpWindowHeight, Mode=TwoWay, Source={StaticResource Settings}}"
+        Width="{Binding Path=Default.HelpWindowWidth, Mode=TwoWay, Source={StaticResource Settings}}"
+        Top="{Binding Path=Default.HelpWindowTop, Mode=TwoWay, Source={StaticResource Settings}}"
+        Left="{Binding Path=Default.HelpWindowLeft, Mode=TwoWay, Source={StaticResource Settings}}">
     <Grid>
         <RichTextBox x:Name="rtb"
                      BorderThickness="0"
