xaml. Stlit BeforeThemeStyles and AfterThemeStyles

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -9,12 +9,15 @@
                 <ResourceDictionary Source="Resources/ConverterResources.xaml" />
                 <ResourceDictionary Source="Resources/ImageResources.xaml" />
                 <ResourceDictionary Source="Resources/ColorResources.xaml" />
-                
-                <ResourceDictionary Source="Styles/SharedStyles.xaml" />
+
+                <ResourceDictionary Source="Styles/BeforeThemeStyles.xaml" />
+
+                <ResourceDictionary Source="Styles/AfterThemeStyles.xaml" />
                 <ResourceDictionary Source="Styles/TreeStyle.xaml" />
                 <ResourceDictionary Source="Styles/ListBoxItemAero2Style.xaml" />
                 
                 <ResourceDictionary Source="Templates/Controls.xaml" />
+
             </ResourceDictionary.MergedDictionaries>
 
             <s:Boolean x:Key="True">True</s:Boolean>
