--- a/Diagnosis.App/Styles/BeforeThemeStyles.xaml
+++ b/Diagnosis.App/Styles/BeforeThemeStyles.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!--This styles will be overwritten with theme styles (if they exist)-->
+    
     <!--  base control styles  -->
     <Style x:Key="ErrorToolTip"
            TargetType="Control">
@@ -11,6 +13,7 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    
     <Style BasedOn="{StaticResource ErrorToolTip}"
            TargetType="TextBox">
         <Setter Property="Height"
@@ -18,17 +21,20 @@
         <Setter Property="VerticalContentAlignment"
                 Value="Center" />
     </Style>
+    
     <Style BasedOn="{StaticResource ErrorToolTip}"
            TargetType="ComboBox">
         <Setter Property="Height"
                 Value="23" />
     </Style>
+    
     <Style BasedOn="{StaticResource ErrorToolTip}"
            TargetType="DatePicker">
-        <Setter Property="FirstDayOfWeek"
-                Value="Monday" />
     </Style>
-    <Style TargetType="TextBlock">
+    
+    <!--textblock-->
+    <Style TargetType="TextBlock"
+           BasedOn="{StaticResource {x:Type TextBlock}}">
         <Style.Triggers>
             <Trigger Property="IsEnabled"
                      Value="False">
@@ -46,7 +52,8 @@
         <Setter Property="HorizontalAlignment"
                 Value="Right" />
         <Style.Resources>
-            <Style TargetType="Button">
+            <Style TargetType="Button"
+                   BasedOn="{StaticResource {x:Type Button}}">
                 <Setter Property="MinWidth"
                         Value="75" />
                 <Setter Property="MinHeight"
@@ -56,48 +63,31 @@
             </Style>
         </Style.Resources>
     </Style>
-
-    <Style x:Key="squareButton"
-           BasedOn="{StaticResource {x:Type Button}}"
-           TargetType="Button">
-        <Setter Property="Width"
-                Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
-    </Style>
-
+    
+    <!--image-->
     <Style x:Key="buttonIcon"
            TargetType="Image">
-        <Setter Property="Margin"
-                Value="0,0,5,0" />
         <Setter Property="Height"
                 Value="16" />
         <Setter Property="Width"
                 Value="16" />
     </Style>
-
+    
+    <!--disable toolbar image-->
     <Style x:Key="{x:Static ToolBar.ButtonStyleKey}"
-           TargetType="{x:Type Button}">
+           TargetType="{x:Type Button}"
+           BasedOn="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
         <Style.Triggers>
             <DataTrigger Binding="{Binding IsEnabled,
                                            RelativeSource={RelativeSource Self}}"
                          Value="False">
                 <Setter Property="Opacity"
-                        Value="0.35" />
+                        Value="0.5" />
             </DataTrigger>
         </Style.Triggers>
         <Style.Resources>
             <Style BasedOn="{StaticResource buttonIcon}"
                    TargetType="Image">
-            </Style>
-        </Style.Resources>
-    </Style>
-
-    <Style TargetType="ToolBar">
-        <Setter Property="ToolBarTray.IsLocked"
-                Value="True" />
-        <Style.Resources>
-            <Style TargetType="Button">
-                <Setter Property="MinWidth"
-                        Value="16" />
             </Style>
         </Style.Resources>
     </Style>
@@ -127,35 +117,6 @@
     </Style>
 
     <!--  forms  -->
-
-    <Style x:Key="formLine"
-           TargetType="DockPanel">
-        <Setter Property="Margin">
-            <Setter.Value>
-                <Thickness Bottom="10">
-                </Thickness>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style TargetType="Label">
-        <Setter Property="VerticalAlignment"
-                Value="Center" />
-        <Setter Property="ContentStringFormat"
-                Value="{}{0}:" />
-    </Style>
-    <Style x:Key="label120"
-           BasedOn="{StaticResource {x:Type Label}}"
-           TargetType="Label">
-        <Setter Property="Width"
-                Value="120" />
-    </Style>
-    <Style x:Key="label90"
-           BasedOn="{StaticResource {x:Type Label}}"
-           TargetType="Label">
-        <Setter Property="Width"
-                Value="90" />
-    </Style>
 
     <Style x:Key="watermark"
            TargetType="TextBlock">
