xaml. Add MahApps Theme
--HG--
branch : f/MahApps

--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -23,6 +23,9 @@
                           IsChecked="{Binding SearchPanel.IsVisible}"
                           Header="_Поиск" />
             </MenuItem>
+            <MenuItem x:Name="metro" IsCheckable="true"
+                      IsChecked="{Binding IsMetroTheme}"
+                      Header="_Metro" />
         </Menu>
 
         <Menu HorizontalAlignment="Right">
