--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -11,10 +11,19 @@
                 <ResourceDictionary Source="Resources/ColorResources.xaml" />
 
                 <ResourceDictionary Source="Styles/BeforeThemeStyles.xaml" />
+                
+                <ResourceDictionary Source="Styles/ListBoxItemAero2Style.xaml" />
+                <ResourceDictionary Source="Styles/TreeStyle.xaml" />
+                
+<!-- Mahapps -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />-->
+
 
                 <ResourceDictionary Source="Styles/AfterThemeStyles.xaml" />
-                <ResourceDictionary Source="Styles/TreeStyle.xaml" />
-                <ResourceDictionary Source="Styles/ListBoxItemAero2Style.xaml" />
                 
                 <ResourceDictionary Source="Templates/Controls.xaml" />
 
