--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -26,6 +26,10 @@
             <MenuItem x:Name="metro" IsCheckable="true"
                       IsChecked="{Binding IsMetroTheme}"
                       Header="_Metro" />
+            <MenuItem x:Name="big"
+                      IsCheckable="true"
+                      IsChecked="{Binding IsBigFont}"
+                      Header="Big" />
         </Menu>
 
         <Menu HorizontalAlignment="Right">
