--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -6,26 +6,28 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/ConverterResources.xaml" />
-                <ResourceDictionary Source="Resources/ImageResources.xaml" />
-                <ResourceDictionary Source="Resources/ColorResources.xaml" />
+                <!--absolute Uri to easy compare-->
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Resources/ConverterResources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Resources/ImageResources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Resources/ColorResources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Resources/NormalFontResources.xaml" />
 
-                <ResourceDictionary Source="Styles/BeforeThemeStyles.xaml" />
-                
-                <ResourceDictionary Source="Styles/ListBoxItemAero2Style.xaml" />
-                <ResourceDictionary Source="Styles/TreeStyle.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Styles/BeforeThemeStyles.xaml" />
+
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Styles/ListBoxItemAero2Style.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Styles/TreeStyle.xaml" />
                 
 <!-- Mahapps -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />-->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />-->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
 
 
-                <ResourceDictionary Source="Styles/AfterThemeStyles.xaml" />
-                
-                <ResourceDictionary Source="Templates/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Styles/AfterThemeStyles.xaml" />
+
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.App;component/Templates/Controls.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
 
