--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -85,7 +85,7 @@
                   CellStyle="{StaticResource CellStyle}"
                   GridLinesVisibility="None"
                   Margin="0,10,0,0"
-                  FontSize="15"
+                  FontSize="{DynamicResource GridRowFontSize}"
                   IsReadOnly="True"
                   SelectionUnit="FullRow"
                   SelectionMode="Extended"
