--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -26,7 +26,7 @@
         </Menu>
 
         <Menu HorizontalAlignment="Right">
-            <MenuItem Header="{Binding CurrentUser, Converter={StaticResource ManToShortName}}">
+            <MenuItem Header="{Binding CurrentUser, Converter={StaticResource ManToName}}">
                 <MenuItem Header="_Настройки..."
                           Command="{Binding OpenSettingsCommand}" />
                 <MenuItem Header="_Выйти"
